<resources>
    <string name="app_name">foodrix</string>
    <string name="MICROSOFT">Foodrix: Food Delievery Partner</string>
    <string name="LOGIN_PAGE">Create an Account </string>
    <string name="forgot_password">Forgot password?  </string>
    <string name="hint_username">Enter your Email address</string>
    <string name="hint_password"> Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="stay_logged_in">Stay logged in?</string>
    <string name="Sign_in">Log In</string>
    <string name="Sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_new_account">Create new account</string>
    <string name="Sign_up_with_apps">Continue with</string>
    <string name="login_with_badge">Log in with Badge</string>
    <string name="Sdk_Logo">Sdk Logo</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash_screen">splash_screen</string>
</resources>