<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity3"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/sdk_logo"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/foodrix8"
        android:contentDescription="Main Logo"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/change_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/create_new_account"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/baseline_account_box_24"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:padding="12dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_adjust_24"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:padding="12dp" />

    <EditText
        android:id="@+id/passwordconfirm"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="15dp"
        android:autofillHints="password"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:drawableLeft="@drawable/baseline_adjust_24"
        android:textColorHint="@android:color/black"
        android:padding="12dp" />

    <Button
        android:id="@+id/moveback"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Sign_up"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:textSize="16sp" />

    <Button
        android:id="@+id/alreadyaccount"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_account"
        android:textColor="@android:color/white"
        android:backgroundTint="#ffd500"
        android:background="@drawable/button_background"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/or_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/Sign_up_with_apps"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/google_logo"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:src="@drawable/img_4"
            android:contentDescription="Google Logo"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/twitter_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/img_5"
            android:contentDescription="Twitter Logo"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="58dp"
            android:layout_height="48dp"
            android:src="@drawable/img_6"
            android:contentDescription="Facebook Logo" />
    </LinearLayout>

</LinearLayout>
