<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity2"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="470px"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/sdk_logo"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/foodrix8"
        android:contentDescription="Main Logo"
        android:layout_gravity="center"
        />

 <!--   <TextView
        android:id="@+id/change_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/MICROSOFT"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />  -->

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="45dp"
        android:autofillHints="username"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/baseline_account_box_24"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:padding="12dp" />

    <!-- RelativeLayout for password and forgot password button -->
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_adjust_24"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:padding="12dp" />

        <!-- Forgot Password Button -->
        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/password"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#00C000"
            android:background="@android:color/transparent"
            android:padding="4dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/MoveID"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:text="@string/Sign_in"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/Move1"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:text="@string/create_new_account"
        android:backgroundTint="#ffd500"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/or_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="@string/Sign_up_with_apps"
            android:textColor="#ffd500"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/google_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/img_4"
            android:contentDescription="Google Logo"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/twitter_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/img_5"
            android:contentDescription="Twitter Logo"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/facebook_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/img_6"
            android:contentDescription="Facebook Logo" />
    </LinearLayout>

</LinearLayout>
